syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.shopix.user.grpc";
option java_outer_classname = "UserProto";

service UserGrpcService {
  rpc GetUserByKeycloakId (GetUserByKeycloakIdRequest) returns (UserResponse);
}

message GetUserByKeycloakIdRequest {
  string keycloakId = 1;
}

message UserResponse {
  string id = 1;
  string keycloakId = 2;
  string firstName = 3;
  string lastName = 4;
  string email = 5;
  bool isSeller = 6;
}
